# xdg-desktop-portal-dde

archlinux/: PKGBUILD
debian/: control
src/: CMakeLists.txt  session.cpp  session.h  xdg-desktop-portal-dde.cpp
src/wayland/: CMakeLists.txt  abstractwaylandportal.h  common.h  fpslimit.cpp  fpslimit.h  linuxdmabuf.cpp  linuxdmabuf.h  portalwaylandcontext.cpp  portalwaylandcontext.h  screencast.cpp  screencast.h  screencastchooserdialog.cpp  screencastchooserdialog.h  screencastframe.cpp  screencastframe.h  screencastportal.cpp  screencastportal.h  screencasttargetmodel.cpp  screencasttargetmodel.h  screencopymanager.h  screenshotframe.cpp  screenshotframe.h  screenshotportal.cpp  screenshotportal.h  timespecutil.cpp  timespecutil.h  treelandcapture.cpp  treelandcapture.h
src/wayland/protocols/: treeland-capture-unstable-v1.xml  treelandcapture.h
